--- a/package.json
+++ b/package.json
@@ -4,11 +4,22 @@
   "description": "webpack pratice",
   "main": "index.js",
   "scripts": {
+    "webpack-dev-server": "webpack-dev-server",
+    "webpack": "webpack",
+    "dev": "npm run webpack-dev-server -- --env.mode development",
+    "prod": "npm run webpack -- --env.mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jonathan",
   "license": "ISC",
-  "dependencies": {
-    "webpack": "^4.33.0"
+  "dependencies": {},
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.33.0",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
