--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^2.0.0",
     "webpack": "^4.33.0",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.3",
