--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "webpack": "webpack",
     "dev": "npm run webpack-dev-server -- --env.mode development --hot",
     "prod": "npm run webpack -- --env.mode production",
+    "prod:typescript": "npm run prod -- --env.presets typescript",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jonathan",
@@ -19,6 +20,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "style-loader": "^0.23.1",
+    "ts-loader": "^6.0.2",
     "url-loader": "^2.0.0",
     "webpack": "^4.33.0",
     "webpack-bundle-analyzer": "^3.3.2",
