--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "dev": "npm run webpack-dev-server -- --env.mode development --hot",
     "prod": "npm run webpack -- --env.mode production",
     "prod:analyze": "npm run prod -- --env.presets analyze",
+    "prod:compress": "npm run prod -- --env.presets compress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jonathan",
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "compression-webpack-plugin": "^3.0.0",
     "css-loader": "^2.1.1",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
