--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prod": "npm run webpack -- --env.mode production",
     "prod:analyze": "npm run prod -- --env.presets analyze",
     "prod:compress": "npm run prod -- --env.presets compress",
+    "debug": "node --inspect --inspect-brk",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jonathan",
